--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,26 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Login"
+            android:exported="true"/>
+        <activity
+            android:name=".Register"
+            android:exported="true"/>
+        <activity
+            android:name=".HomePage"
+            android:exported="true"/>
+        <activity
+            android:name=".CreateDiary"
+            android:exported="true"/>
+        <activity
+            android:name=".EditProfile"
+            android:exported="true"/>
+        <activity
+            android:name=".History"
+            android:exported="true"/>
     </application>
-
 </manifest>
